snapshots/tests/invalid_syntax/mismatched_keywords/property_let_with_end_function_cst.snap
---
source: vb6parse/tests/invalid_syntax/mismatched_keywords.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: PropertyStatement
      children:
        - kind: PropertyKeyword
          text: Property
        - kind: Whitespace
          text: " "
        - kind: LetKeyword
          text: Let
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Value
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: Identifier
              text: newValue
            - kind: Whitespace
              text: " "
            - kind: AsKeyword
              text: As
            - kind: Whitespace
              text: " "
            - kind: IntegerKeyword
              text: Integer
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: Whitespace
              text: "    "
            - kind: AssignmentStatement
              children:
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: m_value
                - kind: Whitespace
                  text: " "
                - kind: EqualityOperator
                  text: "="
                - kind: Whitespace
                  text: " "
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: newValue
                - kind: Newline
                  text: "\n"
            - kind: Unknown
              text: End
            - kind: Whitespace
              text: " "
            - kind: Unknown
              text: Function
            - kind: Newline
              text: "\n"
